# arise-desktop

./: .env.example  .gitignore  AGENTCRAFTER_ARCHITECTURE.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  Dockerfile  PROJECT_REQUIREMENTS.md  README.md  VARIABLE_CHAIN_DESIGN.md  WORKFLOW_REFACTOR_PLAN.md  baseagent_contextual_dynamic_architecture.md  baseagent_user_customization_design.md  db_inspector.py  design.md  docker-compose.yml  electron-builder.json  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/scripts/: upload_to_r2.py
.github/workflows/: release.yml  test-build.yml
agent_builder/: AGENTBUILDER_ARCHITECTURE.md  AGENTBUILDER_REQUIREMENTS.md  README.md  __init__.py  project_manager_agent.py
agent_builder/claude_integration/: __init__.py  claude_code_client.py
agent_builder/cli/: main.py
agent_builder/core/: __init__.py  agent_builder.py  agent_designer.py  code_generator.py  requirement_parser.py  schemas.py  tool_capability_analyzer.py  workflow_builder.py
agent_builder/examples/: usage_example.py
agent_builder/knowledge_base/: __init__.py  tool_knowledge_base.py
agent_builder/requirement_analyzer/: __init__.py
agent_builder/tests/: test_builder.py
base_app/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  example_workflow.json  pyproject.toml  requirements.txt
base_app/base_app/: __init__.py
base_app/config/: baseapp.yaml
base_app/core/: __init__.py
base_app/docs/: BASEAPP_ARCHITECTURE.md  (+3 more)
client/: README.md
config/: baseapp.yaml
core/: base_agent.py  memory_manager.py  workflow_engine.py
daemon-ts/: package-lock.json  package.json
docs/: DOM_API_REFERENCE.md  README.md  SIMPLE_CONFIG_DESIGN.md  TECHNICAL_DEBT.md  agent-prompts-reference.md  app_backend_api.md  browser-session-manager-redesign.md  browser-use-api-reference.md  chatbox-task-integration-plan.md  cloud_backend_api.md  competitive_analysis_ami_vs_n8n.md  conversation-memory-design.md  database_architecture.md  electron-migration-design.md  enrich-intermediate-status-design.md  floating-dot-design.md  frontend-refactor-plan.md  frontend-sse-events-enhancement.md  intent-sequence-agent-design.md  memory-agent-integration-design.md  memory-api-curl-test.md  memory-as-map-design.md  memory-graph-redesign-v2.md  memory-library-extraction-design.md  memory-llm-reasoner-design.md  memory-merge-private-public-design.md  memory-multi-tenant-design.md  memory-planner-agent-design.md  memory-query-interface-design.md  memory-query-redesign.md  memory-system-design.md  neo4j-api-reference.md  neo4j-graphstore-design.md  online-learning-cognitive-phrase-design.md  online-learning-design.md  orchestrator-document-toolkit-design.md  packaging-size-analysis.md  page-instance-independent-node-design.md  persistent-orchestrator-design.md  product-roadmap-eigent-benchmark.md  (+10 more)
electron/: daemon-launcher.cjs  main.cjs
examples/: browser_examples.py  end_to_end_nlq_workflow.py  run_demo.sh  test_embedding_service.py  test_neo4j_graphstore.py  unified_ontology_demo.py
intent_builder/: QUICKSTART.md
runtimes/: README.md
schemas/: __init__.py  agent_schema.py
scripts/: analyze_memory_data_loss.py  browser_interactive_test.py  build.sh  build_app_macos.sh  build_app_windows.ps1  build_daemon.sh  build_portable_windows.ps1  build_release.sh  debug_memory_llm_context.py  debug_memory_path_planning.py  debug_task_planner.py  delete_public_memory.py  deploy_api_proxy.sh  eval_state_embedding_ab.py  format_code.py  migrate_neo4j_rel_types.py  parse_task_log.py  planner_test_result.md  prepare_git_bash_windows.ps1  r2-browser-worker.js  run_cloud_tests.sh  run_desktop_app.bat  run_desktop_app.sh  run_desktop_app_dev.sh  run_integration_test.sh  run_local_cloud_desktop_app.bat  start_api_proxy.sh  start_both_backends.sh  start_cloud_backend.sh  start_http_daemon.sh  start_local_backend.sh  test_browser_reuse.py  test_excel_toolkit.py  test_intent_sequence_api.py  test_intent_sequence_v2.py  test_learner_agent.py  test_markdown_docx_pdf.py  test_markdown_inspect.py  test_memory_data_flow.py  test_memory_toolkit.py  (+5 more)
src/: App.jsx  CONTEXT.md  __init__.py  __init__.py.bak
src/base_app/: pyproject.toml  test_user_interface.py
src/base_app/base_app/: __init__.py
src/base_app/base_app/base_agent/agents/: __init__.py  browser_agent.py  scraper_agent.py  storage_agent.py
src/base_app/base_app/base_agent/core/: agent_workflow_engine.py  base_agent.py  schemas.py
src/base_app/base_app/base_agent/examples/: agent_workflow_demo.py  workflow_demo.py
src/base_app/base_app/base_agent/tools/: base_tool.py  browser_session_manager.py
src/base_app/base_app/base_agent/tools/browser_use/: __init__.py  browser_use.py  dom_extractor.py
src/base_app/base_app/base_agent/tools/browser_use/user_behavior/: behavior_tracker.js  monitor.py
src/base_app/base_app/base_agent/workflows/: workflow_loader.py
src/base_app/base_app/base_agent/workflows/builtin/: allegro-coffee-collection-workflow.yaml  producthunt-weekly-leaderboard-scraper.yaml
src/base_app/base_app/base_agent/workflows/user/: foreach-test-workflow.yaml  output_coffee_workflow.yaml
src/base_app/base_app/cli/core/: __init__.py  utils.py
src/base_app/base_app/server/: main.py
src/base_app/base_app/server/api/: agent.py  chat.py  system.py
src/base_app/base_app/server/core/: config_service.py
src/base_app/base_app/web/public/: index.html
src/base_app/base_app/web/src/components/: MessageList.js
src/base_app/config/: baseapp.yaml
src/clients/desktop_app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src/clients/desktop_app/src-tauri/context_files/session_20260202_003018_269965/: context_summary_20260202_003113.md
src/clients/desktop_app/src-tauri/icons/: icon.icns
src/clients/desktop_app/src-tauri/resources/: README.md
src/clients/desktop_app/src-tauri/src/: main.rs  python_daemon.rs
tests/: README.md  pytest.ini  test_browser_tool.py  test_browser_tool_simple.py  test_config.yaml
web/: CONTEXT.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+1541 files in other folders)
