[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ami"
version = "0.1.0"
description = "Natural Language Driven Agent Platform"
authors = [
    {name = "Ami Team", email = "team@ami.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web framework
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "jinja2>=3.1.2",

    # Data validation and serialization
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "jsonschema>=4.20.0",

    # Database
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",

    # Redis and task queue
    "redis>=5.0.1",
    "celery>=5.3.4",

    # HTTP client
    "httpx>=0.25.2",
    "requests>=2.31.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Logging and monitoring
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "structlog>=23.2.0",

    # System utilities
    "docker>=6.1.3",
    "psutil>=5.9.0",

    # Graph and data processing
    "networkx>=3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

monitoring = [
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
]

[project.scripts]
ami = "ami.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ami*", "core*", "tools*", "api*"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
