[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ami"
version = "0.2.3"
description = "Natural Language Driven Agent Platform"
authors = [
    {name = "Ami Team", email = "team@ami.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",

    # Data validation and serialization
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "json-repair>=0.30.0",

    # HTTP client
    "httpx>=0.25.2",

    # LLM providers
    "anthropic>=0.25.0",
    "openai>=1.3.0",

    # Utilities
    "pathspec>=0.11.0",
]

[project.optional-dependencies]
# Cloud backend: pip install .[cloud]
cloud = [
    "python-jose[cryptography]>=3.3.0",
    "pydantic[email]>=2.5.0",
    "slowapi>=0.1.9",
]

# Memory services (common/memory): pip install .[memory]
memory = [
    "networkx>=3.0",
    "numpy>=1.24.0",
    "neo4j>=5.0.0",
    "surrealdb>=1.0.0",
    "nest-asyncio>=1.6.0",
]

# All components: pip install .[all]
all = [
    "ami[cloud]",
    "ami[memory]",
]

dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

monitoring = [
    "prometheus-client>=0.19.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "opentelemetry-api>=1.21.0",
]

[project.scripts]
ami = "ami.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ami*", "core*", "tools*", "api*"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
